assets/scss/style.scss
@import 'variables';

// Override navbar link font size
.navbar-light {
  .nav-link {
    font-size: 1.125rem;
  }
}

// parallax common class
.parallax-section {
  background-attachment: fixed;
  background-size: cover;
  overflow: hidden;
  padding-bottom: 110px;
  padding-top: 110px;
  position: relative;
  width: 100%;

  &::before {
    background-size: 280px;
    bottom: 0;
    content: '';
    left: 0;
    position: absolute;
    right: 0;
    top: 0;
  }

  .bgc-dark {
    background-color: $bg-color;
  }

  .wrap {
    color: $white-color;
    text-align: center;
    z-index: 999;

    img {
      margin-bottom: 35px;
    }

    h1 {
      font-size: 2.125rem;
    }

    .btn {
      margin-bottom: 35px;
      margin-top: 25px;
      text-transform: uppercase;
    }
  }
}

// Parallax Header presentation
.bloc-1-hero {
  background-image: url('../img/la-chouette-agence-banniere.jpg');
}

.tight-width-whitespace {
  margin: auto;
  max-width: 700px;
}

.bloc-2-services {
  text-align: center;

  h3 {
    font-weight: bold;
  }
}

.bloc-3-services {
  .icon-lg {
    border-color: $icon-color;
    color: $icon-color;

    &::before {
      font-size: 4rem;
    }
  }

  h3 {
    font-size: 1.25rem;
    font-weight: bold;
    text-transform: uppercase;
  }

  p {
    font-size: 1.125rem;
    line-height: 1.33333333;
  }
}

// Parallax Header presentation
.bloc-2-hero {
  background-image: url('../img/image-de-presentation.jpg');
}

.bloc-5-cta {
  background-image: url('../img/la-chouette-agence-banniere.jpg');
}

.texture-paper {
  &::before {
    background-image: url('../img/texture-paper.png');
  }
}

.blockquote {
  p {
    font-size: 1.5rem;
    font-style: italic;
  }
}

.et-icon {
  color: $icon-color;
}

.photos {
  h2 {
    font-size: 1.375rem;
    font-weight: bold;
    margin-top: 5px;
    text-transform: uppercase;
  }
}

.ext-links {
  a {
    color: $bg-color;
  }
}

.ligthbox-image {
  display: block;
  position: relative;
  text-align: center;

  &:hover {
    &::before {
      background: $bg-transparent;
      border-radius: 50%;
      color: $white-color;
      content: '+';
      font-family: 'HelveticaNeue-Light', 'Helvetica Neue Light', 'Helvetica Neue', 'Helvetica', 'Arial';
      font-size: 32px;
      font-weight: 100;
      height: 50px;
      left: 50%;
      margin-left: -25px;
      position: absolute;
      top: 50%;
      transform: translateY(-50%);
      width: 50px;
      z-index: 1;
    }

    img {
      animation-fill-mode: none;
      opacity: .6;
    }
  }
}

.social {
  fill: $icon-color;

  svg {
    height: 36px;
    width: 36px;
  }
}

.maps {
  iframe {
    width: 100%;
  }
}

.scroll-top {
  bottom: 26px;
  padding: 15px;
  position: fixed;
  right: 39px;
  z-index: 999;

  img {
    height: 16px;
    width: 16px;
  }
}

.height {
  height: 3000px;
}

@media all and (max-width: 576px) {
  .navbar-brand {
    img {
      max-width: 200px;
    }
  }

  .bloc-1-hero {
    background-image: url('../img/la-chouette-agence-banniere-xl.jpg');

    img {
      height: 100px;
      width: 100px;
    }
  }

  .bloc-2-hero {
    background-image: url('../img/image-de-presentation-xs.jpg');

    h2 {
      margin: 10px;
    }
  }

  .bloc-5-cta {
    background-image: url('../img/la-chouette-agence-banniere-xl.jpg');
  }

  .parallax-section {
    padding-bottom: 40px;
    padding-top: 40px;

    .wrap {
      h1 {
        font-size: 1.5rem;
      }

      h2 {
        font-size: 1.375rem;
      }

      img {
        margin: 15px 0;
      }
    }
  }

  .scroll-top {
    right: 5px;
  }
}

